--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-google-maps/api": "^2.20.5",
     "@tailwindcss/cli": "^4.0.3",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
