--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rent-yacth-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://sideviprental.com",
+  "homepage": "https://yachtrentalside.com",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
